yc-sirius/edu-goofy-allen/nginx-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  namespace: edu-goofy-allen
  labels:
    app.kubernetes.io/app: nginx-app
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
      name: http
