yc-sirius/edu-goofy-allen/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-goofy-allen
  labels:
    app.kubernetes.io/name: django-service
    app.kubernetes.io/env: dev
    app.kubernetes.io/owner: SergeyPavlov
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30351
  type: NodePort
