yc-sirius/edu-goofy-allen/nginx-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-goofy-allen
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30351
  type: NodePort
